Adjust collaboration button margin to stop overflowing

--- a/style.css
+++ b/style.css
@@ -1,125 +1,124 @@
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display|Poppins);
-
 body {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .a-logo {
-  display: flex;
-  justify-content: end;
-  height: 100%;
-  width: 100%;
+    display: flex;
+    justify-content: end;
+    height: 100%;
+    width: 100%;
 }
 
 nav a {
-  display: none;
+    display: none;
 }
 
-header > * {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+header>* {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .logo-container {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .fa-bars {
-  width: 300px;
-  color: black;
-  height: 100%;
-  margin-left: 90%;
-  margin-top: -50px;
-  cursor: pointer;
-  outline: none;
-  font-size: 30px;
+    width: 300px;
+    color: black;
+    height: 100%;
+    margin-left: 90%;
+    margin-top: -50px;
+    cursor: pointer;
+    outline: none;
+    font-size: 30px;
 }
 
 .headline {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .headline .name {
-  width: 85%;
-  justify-self: flex-start;
-  height: 100px;
-  font-family: 'Playfair Display', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 35px;
-  margin-bottom: 10px;
-  color: #1a2236;
-  line-height: 1;
+    width: 85%;
+    justify-self: flex-start;
+    height: 100px;
+    font-family: 'Playfair Display', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    margin-bottom: 10px;
+    color: #1a2236;
+    line-height: 1;
 }
 
 .headline button:hover {
-  border: solid 1px #1a2236;
-  background-color: #fff;
-  color: #1a2236;
+    border: solid 1px #1a2236;
+    background-color: #fff;
+    color: #1a2236;
 }
 
 .headline button:active {
-  border: solid 3px #1a2236;
-  background-color: #fff;
-  color: #1a2236;
+    border: solid 3px #1a2236;
+    background-color: #fff;
+    color: #1a2236;
 }
 
 .headline .main {
-  width: 85%;
-  height: 126px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  font-family: 'Poppins', sans-serif;
-  line-height: 25px;
-  letter-spacing: -0.02em;
-  color: #1a2236;
-  margin-top: 35px;
-  align-self: center;
-  text-align: left;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 20px;
+    width: 85%;
+    height: 126px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    line-height: 25px;
+    letter-spacing: -0.02em;
+    color: #1a2236;
+    margin-top: 35px;
+    align-self: center;
+    text-align: left;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
 }
 
 .headline .collaboration {
-  width: 85%;
-  height: 50px;
-  background: #1a2236;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 80px;
-  margin-bottom: 50px;
-  text-decoration: none;
-  color: white;
-  font-weight: 200;
-  font-size: 20px;
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
-  border: 0;
-  border-radius: 5px;
+    width: 85%;
+    height: 50px;
+    background: #1a2236;
+    /* margin-left: auto;
+  margin-right: auto; */
+    margin-top: 80px;
+    margin-bottom: 50px;
+    text-decoration: none;
+    color: white;
+    font-weight: 200;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    border: 0;
+    border-radius: 5px;
 }
 
 .geometry {
-  background-image: url(images/image_geometry_2.png);
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 30vh;
-  overflow: hidden;
-  background-size: cover;
-  margin-left: auto;
-  margin-right: auto;
-  background-position: center;
+    background-image: url(images/image_geometry_2.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 30vh;
+    overflow: hidden;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+    background-position: center;
 }
